syntax = "proto3";

package entity.v1;

option go_package = "github.com/boshu2/lattice-lab/gen/entity/v1;entityv1";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

enum EntityType {
  ENTITY_TYPE_UNSPECIFIED = 0;
  ENTITY_TYPE_ASSET = 1;
  ENTITY_TYPE_TRACK = 2;
  ENTITY_TYPE_GEO = 3;
}

enum ThreatLevel {
  THREAT_LEVEL_UNSPECIFIED = 0;
  THREAT_LEVEL_NONE = 1;
  THREAT_LEVEL_LOW = 2;
  THREAT_LEVEL_MEDIUM = 3;
  THREAT_LEVEL_HIGH = 4;
}

message Entity {
  string id = 1;
  EntityType type = 2;
  map<string, google.protobuf.Any> components = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  uint64 hlc_physical = 6;
  uint32 hlc_logical = 7;
  string hlc_node = 8;
}

// Components â€” composable data bags attached to entities.

message PositionComponent {
  double lat = 1;
  double lon = 2;
  double alt = 3;
}

message VelocityComponent {
  double speed = 1;
  double heading = 2;
}

message ClassificationComponent {
  string label = 1;
  float confidence = 2;
}

message TaskCatalogComponent {
  repeated string available_tasks = 1;
}

message ThreatComponent {
  ThreatLevel level = 1;
}

enum ApprovalState {
  APPROVAL_STATE_UNSPECIFIED = 0;
  APPROVAL_STATE_AUTO_APPROVED = 1;
  APPROVAL_STATE_PENDING = 2;
  APPROVAL_STATE_APPROVED = 3;
  APPROVAL_STATE_DENIED = 4;
  APPROVAL_STATE_TIMED_OUT = 5;
}

message ApprovalComponent {
  ApprovalState state = 1;
  int64 timeout_seconds = 2;
  google.protobuf.Timestamp requested_at = 3;
}

message FusionComponent {
  repeated string source_ids = 1;
  double fused_lat = 2;
  double fused_lon = 3;
  float confidence = 4;
}

message SourceComponent {
  string sensor_id = 1;
  string sensor_type = 2;
}
